7.infra/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: client-deployment

spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: client

  # post template
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: nsnhatlong/client
