7.infra/k8s/event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: event-bus-deployment

spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: event-bus

  # post template
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus-deployment
          image: nsnhatlong/event-bus
