7.infra/k8s/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: moderation-deployment

spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: moderation

  # post template
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: nsnhatlong/moderation
