7.infra/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: query-deployment

spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: query

  # post template
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: nsnhatlong/query
