7.infra/k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: client-cluster-ip-service # where other service refer to with http://

spec:
  type: ClusterIP
  selector:
    app: client # apply for pods with label
  ports:
    - name: client
      protocol: TCP
      port: 3000 # service port
      targetPort: 3000 # internal exposed container port (pods)
