7.infra/k8s/comments-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: comments-cluster-ip-service # where other service refer to with http://

spec:
  type: ClusterIP
  selector:
    app: comments # apply for pods with label
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # service port
      targetPort: 4001 # internal exposed container port (pods)
