7.infra/k8s/moderation-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: moderation-cluster-ip-service # where other service refer to with http://

spec:
  type: ClusterIP
  selector:
    app: moderation # apply for pods with label
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 # service port
      targetPort: 4003 # internal exposed container port (pods)
