7.infra/k8s/posts-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: posts-cluster-ip-service # where other service refer to with http://

spec:
  type: ClusterIP
  selector:
    app: posts # apply for pods with label
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # service port
      targetPort: 4000 # internal exposed container port (pods)
