7.infra/k8s/posts-nodeport-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: posts-nodeport-service

spec:
  type: NodePort
  selector:
    app: posts # exposed pods with this label

  # exposed port
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # direct traffic from port
      targetPort: 4000 # inner exposed port of container
