7.infra/k8s/query-cluster-ip-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: query-cluster-ip-service # where other service refer to with http://

spec:
  type: ClusterIP
  selector:
    app: query # apply for pods with label
  ports:
    - name: query
      protocol: TCP
      port: 4002 # service port
      targetPort: 4002 # internal exposed container port (pods)
