7.infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # allow regex in path
spec:
  rules:
    - host: posts.com # fake domain name
      http:
        # order matter in this path
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-cluster-ip-service
                port:
                  number: 4000

          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-cluster-ip-service
                port:
                  number: 4002

          - path: /posts/(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-cluster-ip-service
                port:
                  number: 4001

          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
